--- a/html/animation.html
+++ b/html/animation.html
@@ -48,28 +48,6 @@
     </style>
 </head>
 <body>
-    <div class="bouncing" id="bounce" >hello</div>
-    <button id="btn" onclick="fun()">hello</button>
-    <script>
-       function fun(){
-            let a =document.getElementById("btn");
-            a.style.backgroundColor='red';
-            clearTimeout(d)
-        }
-        let a= document.getElementById("bounce")
-        a.addEventListener('mouseover', function run(){
-            a.style.backgroundColor='white';
-            a.innerHTML="hell"
-        })
-        let b= document.getElementById("bounce")
-        b.addEventListener('mouseout', function run(){
-            b.style.backgroundColor='red';
-            a.innerHTML="hello"
-        })
-       let d= setTimeout(() => {
-            alert("hello")
-        }, 3000);
-        
-    </script>
+    hello
 </body>
 </html>
