--- a/home.html
+++ b/home.html
@@ -23,8 +23,11 @@
         <li><a href="/">Home</a></li>
         <li><a href="./About">About</a></li>
         <li><a href="./ContactUs">Contact Us</a></li>
-        <li><a href="./Services">Services</a></li>
+        <li><a href="./Services">Services &copy;</a></li>
     </ul>
     
 </body>
+<script>
+    alert("hello")
+</script>
 </html>
